--- a/package.json
+++ b/package.json
@@ -117,7 +117,7 @@
     "typescript": "^4.5.5"
   },
   "dependencies": {
-    "http2-client": "^1.3.5",
+    "ndjson": "^2.0.0",
     "rxjs": "^7.5.2"
   }
 }
