--- a/package.json
+++ b/package.json
@@ -1,8 +1,11 @@
 {
   "name": "@ntrp/ksqldb-client",
-  "version": "0.1.0",
-  "description": "",
-  "keywords": [],
+  "version": "0.0.0-development",
+  "description": "A KsqlDB javascript client leveraging observables and promises",
+  "keywords": [
+    "KsqlDB",
+    "ksql"
+  ],
   "main": "dist/ksqldb-client.umd.js",
   "module": "dist/ksqldb-client.es5.js",
   "typings": "dist/types/ksqldb-client.d.ts",
@@ -12,11 +15,11 @@
   "author": "Ivan Greguric Ortolan <ivan.g.ortolan@gmail.com>",
   "repository": {
     "type": "git",
-    "url": "git@github.com:ntrp/ksqldb-client.git"
+    "url": "https://github.com/ntrp/ksqldb-client.git"
   },
   "license": "MIT",
   "engines": {
-    "node": ">=6.0.0"
+    "node": ">=12.0.0"
   },
   "scripts": {
     "lint": "tslint --project tsconfig.json -t codeFrame 'src/**/*.ts' 'test/**/*.ts'",
@@ -94,7 +97,7 @@
     "commitizen": "^4.2.4",
     "coveralls": "^3.0.2",
     "cross-env": "^7.0.3",
-    "cz-conventional-changelog": "^3.3.0",
+    "cz-conventional-changelog": "^3.0.1",
     "husky": "^7.0.4",
     "jest": "^27.4.7",
     "jest-config": "^27.4.7",
