--- a/package.json
+++ b/package.json
@@ -84,6 +84,11 @@
       "@commitlint/config-conventional"
     ]
   },
+  "release": {
+    "branches": [
+      "main"
+    ]
+  },
   "devDependencies": {
     "@commitlint/cli": "^16.1.0",
     "@commitlint/config-conventional": "^16.0.0",
@@ -91,6 +96,7 @@
     "@rollup/plugin-json": "^4.1.0",
     "@rollup/plugin-node-resolve": "^13.1.3",
     "@rollup/plugin-typescript": "^8.3.0",
+    "@semantic-release/npm": "^9.0.1",
     "@types/jest": "^27.4.0",
     "@types/node": "^17.0.12",
     "colors": "^1.3.2",
