--- a/package.json
+++ b/package.json
@@ -90,24 +90,30 @@
     ]
   },
   "devDependencies": {
-    "@commitlint/cli": "^16.1.0",
-    "@commitlint/config-conventional": "^16.0.0",
-    "@rollup/plugin-commonjs": "^21.0.1",
+    "@commitlint/cli": "^17.0.2",
+    "@commitlint/config-conventional": "^17.0.2",
+    "@rollup/plugin-commonjs": "^22.0.0",
     "@rollup/plugin-json": "^4.1.0",
     "@rollup/plugin-node-resolve": "^13.1.3",
     "@rollup/plugin-typescript": "^8.3.0",
     "@semantic-release/npm": "^9.0.1",
     "@types/jest": "^27.4.0",
     "@types/node": "^17.0.12",
+    "@typescript-eslint/eslint-plugin": "^5.27.0",
+    "@typescript-eslint/parser": "^5.27.0",
     "colors": "^1.3.2",
     "commitizen": "^4.2.4",
     "coveralls": "^3.0.2",
     "cross-env": "^7.0.3",
     "cz-conventional-changelog": "^3.0.1",
-    "husky": "^7.0.4",
-    "jest": "^27.4.7",
-    "jest-config": "^27.4.7",
-    "lint-staged": "^12.3.1",
+    "eslint": "^8.16.0",
+    "eslint-config-airbnb-base": "^15.0.0",
+    "eslint-config-prettier": "^8.5.0",
+    "eslint-plugin-import": "^2.26.0",
+    "husky": "^8.0.1",
+    "jest": "^28.1.0",
+    "jest-config": "^28.1.0",
+    "lint-staged": "^13.0.0",
     "lodash": "^4.17.21",
     "prettier": "^2.5.1",
     "prompt": "^1.0.0",
@@ -116,7 +122,7 @@
     "rollup": "^2.66.1",
     "semantic-release": "^19.0.2",
     "shelljs": "^0.8.3",
-    "ts-jest": "^27.1.3",
+    "ts-jest": "^28.0.3",
     "ts-node": "^10.4.0",
     "tslib": "^2.3.1",
     "tslint": "^6.1.3",
