--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,5 +1,6 @@
 name: Release
 on:
+  workflow_dispatch:
   push:
     branches:
       - main
@@ -18,9 +19,9 @@ jobs:
           node-version: 'lts/*'
       - name: Install dependencies
         run: npm ci
-      - name: Test
-        run: npm ci
-      - name: Install dependencies
+          #- name: Test
+          #  run: npm test
+      - name: Semantic Release
         run: npm run build
       - name: Release
         env:
